# design_patterns

./: .clangd  .gitignore  CMakeLists.txt  README.md  proxy.hpp
creational/: CMakeLists.txt  ICloneable.hpp  prototype.hpp
creational/tests/: CMakeLists.txt  test_icloneable.cpp
structural/: CMakeLists.txt  proxy.hpp  proxy_v1.hpp  test.cpp
structural/proxy/: CMakeLists.txt  aligned_storage.hpp  any_with_allocator.hpp  demo.py  function_with_allocator.hpp  proxy.hpp  proxy.hpp.old
structural/proxy/tests/: CMakeLists.txt  memory_tracker.hpp  test_proxy.cpp  test_proxy_v2.cpp  uml_diag  uml_diag.txt
structural/tests/: test_proxy.cpp  test_proxy_v2.cpp
tests/: test_proxy.cpp  test_proxy_v1.cpp
